Criação de pages de receitas e âncoras no index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Receita de Burritos</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Receitas</h1>
+    <section>
+      <h1>Melhores Receitas de Burritos</h1>
+      <ol>
+        <li>
+          <a href="/pages/burritoMexicanoTudoGostoso.html"
+            >Burritos do Tudo Gostoso</a
+          >
+        </li>
+        <li>
+          <a href="/pages/burritoMexicanoTudoReceita.html"
+            >Burritos do Tudo Receita</a
+          >
+        </li>
+        <li>
+          <a href="/pages/burritoMexicanoAnaMaria.html"
+            >Burritos da Ana Maria
+          </a>
+        </li>
+      </ol>
+    </section>
+  </body>
 </html>
