criação de âncora para páginas externas

--- a/index.html
+++ b/index.html
@@ -28,5 +28,25 @@
         </li>
       </ol>
     </section>
+    <section>
+      <h1>Link de Outras Receitas</h1>
+      <ul>
+        <li>
+          <a href="https://www.panelinha.com.br/receita/Guacamole">Guacamole</a>
+        </li>
+        <li>
+          <a
+            href="https://www.tudogostoso.com.br/receita/1979-bolinho-de-bacalhau.html"
+            >bolinho de bacalhau</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.tudogostoso.com.br/receita/104383-torta-de-limao.html"
+            >Torta de Limão</a
+          >
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
