--- a/index.html
+++ b/index.html
@@ -6,45 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Receita de Burritos</title>
   </head>
+
   <body>
     <h1>Receitas</h1>
     <section>
-      <h1>Melhores Receitas de Burritos</h1>
-      <ol>
+      <h1>Receita de Burritos Mexicanos</h1>
+      <ul>
         <li>
-          <a href="/pages/burritoMexicanoTudoGostoso.html"
-            >Burritos do Tudo Gostoso</a
-          >
+          <a href="/pages/burritoMexicano.html">Burritos do Tudo Gostoso</a>
         </li>
-        <li>
-          <a href="/pages/burritoMexicanoTudoReceita.html"
-            >Burritos do Tudo Receita</a
-          >
-        </li>
-        <li>
-          <a href="/pages/burritoMexicanoAnaMaria.html"
-            >Burritos da Ana Maria
-          </a>
-        </li>
-      </ol>
+      </ul>
     </section>
     <section>
       <h1>Link de Outras Receitas</h1>
       <ul>
         <li>
-          <a href="https://www.panelinha.com.br/receita/Guacamole">Guacamole</a>
+          <a href="/pages/guacamole.html">Guacamole</a>
         </li>
         <li>
-          <a
-            href="https://www.tudogostoso.com.br/receita/1979-bolinho-de-bacalhau.html"
-            >bolinho de bacalhau</a
-          >
+          <a href="/pages/bolinhoBacalhau.html">bolinho de bacalhau</a>
         </li>
         <li>
-          <a
-            href="https://www.tudogostoso.com.br/receita/104383-torta-de-limao.html"
-            >Torta de Limão</a
-          >
+          <a href="/pages/bolinhoArroz.html">Bolinho de Arroz</a>
         </li>
       </ul>
     </section>
